@@ -7,6 +7,7 @@ version = '1.0.1.dev0'
 tests_require = [
     'plone.app.testing',
     'mock',
+    'ftw.testing',
 ]
 
 install_requires = [
